<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Calculadora">

    <Button
        android:id="@+id/txtcaltomenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginBottom="52dp"
        android:background="#87BD48"
        android:onClick="goMain"
        android:text="@string/txtcaltomenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtresultadocal"
        android:layout_width="146dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:text="@string/txtresultadocal"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Numero2"
        app:layout_constraintVertical_bias="0.051" />

    <Button
        android:id="@+id/Suma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:background="#673AB7"
        android:onClick="calcular"
        android:text="@string/Suma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Resta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:background="#673AB7"
        android:onClick="restar"
        android:text="@string/Resta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Suma" />

    <Button
        android:id="@+id/Multiplica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:background="#673AB7"
        android:onClick="Multiplicar"
        android:text="@string/Multiplica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Resta" />

    <Button
        android:id="@+id/Divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:background="#673AB7"
        android:text="@string/Divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Multiplica" />

    <EditText
        android:id="@+id/Numero1"
        android:layout_width="145dp"
        android:layout_height="46dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/escriba_1"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Numero2"
        android:layout_width="145dp"
        android:layout_height="46dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/escriba_2"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Numero1" />
</android.support.constraint.ConstraintLayout>