<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B0ABB8"
    tools:context=".Views.MainActivity">

    <TextView
        android:id="@+id/txtinicio"
        android:layout_width="293dp"
        android:layout_height="65dp"
        android:background="#8F9796"
        android:text="@string/hola_francisco_bienvenido_a_tus_aplicaciones"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <Button
        android:id="@+id/txtcalculadora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:onClick="goToCalculadora"
        android:text="@string/calculadora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtinicio" />

    <Button
        android:id="@+id/txtpromedio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="124dp"
        android:onClick="goToPromedio"
        android:text="@string/pagoxpromedio"
        app:layout_constraintEnd_toStartOf="@+id/txtcalculadora"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtinicio" />

    <Button
        android:id="@+id/txtpagoentradacine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="216dp"
        android:onClick="goToPagoentradacine"
        android:text="@string/pago_entrada_cine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtinicio" />

</android.support.constraint.ConstraintLayout>